# malloy-mcp-server

./: .gitignore  README.md  hello.py  pyproject.toml  refactor.md  specs.md
src/malloy_mcp_server/: __init__.py  __main__.py  errors.py  prompts.py  resources.py  server.py  tools.py
src/malloy_mcp_server/models/: __init__.py  resources.py
src/malloy_mcp_server/prompts/: query_creator.py
src/malloy_mcp_server/tools/: data_analyzer.py  query_executor.py
tests/: __init__.py  conftest.py  test_query_executor.py  test_server.py
