[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "malloy-mcp-server"
version = "0.1.0"
description = "MCP server for executing Malloy queries"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Nick Amabile", email = "nick.amabile@gmail.com" },
]
dependencies = [
    "mcp>=0.1.0",
    "malloy-publisher-client>=0.1.1",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=malloy_mcp_server --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
